# Bindu

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION_OPPORTUNITIES.md  CONTRIBUTION_SUMMARY.md  FEATURE_CIRCUIT_BREAKER.md  FINANCIAL_AGENT.md  PAUSE_RESUME_DEBUGGING.md  PAUSE_RESUME_IMPLEMENTATION.md  PROJECT_CONTEXT.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.ta.md  README.zh.md  README_GRPC.md  ReadMe.swa.md  SPLIT_PLAN.md  Satvik.md  TEST_CONTRIBUTION_PLAN.md  VERIFICATION.md  debug_news.py  debug_price.py  dspy_docs.md  market_agent.py  pyproject.toml  pytest.ini  run_mortgage_agent.py  security_logs.json  test_collab_pipeline.py  test_comprehensive_trust.py  test_config_validator_direct.py  test_pause_resume.py  test_sample_configs.py  (+4 more)
.agents/escrow_agent/: README.md  agent.py
.agents/skills/: rag_agent.md
.bindu/: private.pem  public.pem
.github/: contributing.md
.github/workflows/: ci.yml  release.yml  trufflehog.yml
AI-Agents/: .env.example  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
AI-Agents/.devcontainer/: devcontainer.json
AI-Agents/.github/workflows/: build-and-push.yml
AI-Agents/docs/: index.md  modules.md
AI-Agents/tests/: test_main.py
Negotiation-Agent/: .env.example  .gitignore  README.md  requirements.txt
Negotiation-Agent/backend/: auth_service.py  database.py  enhanced_ai_service.py  enhanced_scraper.py  gemini_service.py  langchain_agent.py  main.py  mcp_integration.py  models.py  negotiation_engine.py  scraper_service.py  session_manager.py  websocket_manager.py
Negotiation-Agent/frontend/: index.html  package.json  react-app.html  seller-portal.html  tailwind.config.js  vite.config.js
agentmesh/: README.md
agentmesh/docker/: docker-compose.yml
agents/: code_review_agent.py  research_paper_agent.py  writing_assistant_agent.py
alembic/: env.py
alembic/versions/: 20250614_0001_add_webhook_configs_table.py  20251207_0001_initial_schema.py  20251207_0905_ef0d61440935_add_foreign_key_constraint_from_tasks_.py  20260119_0001_add_schema_support.py  20260120_0002_add_prompt_id_to_tasks.py  (+1 more)
api/: agents.py
bindu/: __main__.py  edge_client.py  retry.py  settings.py
bindu-ui/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json  vite.config.js
bindu_node/: README.md  main.py
boxd/: __init__.pyi  aio.pyi
bugs/: known-issues.md
certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
cli/: doctor.py
collab_pipeline/: README.md  collab_orchestrator.py  summarizer_agent.py  translator_agent.py
docs/: AGENT_TRUST.md  AUTH.md  AUTHENTICATION.md  CIRCUIT_BREAKER.md  CLI.md  INTEGRATION.md  PAUSE_RESUME.md  PAYMENT.md  PRIVATE_SKILLS.md  PR_VOICE_AGENT_README.md  RATE_LIMITING_AND_DEDUPLICATION.md  RESILIENCE.md  RETRY_ENHANCEMENTS.md  SCHEDULER.md  SCOPEBLIND.md  SECURITY_STACK.md  STREAMING.md  VOICE.md  VOICE_AGENT_PLAN.md  windows-setup.md
examples/: README.md  README_HACKER_NEWS.md  agno_dspy_example.py  bug_explainer_agent.py  dspy_agent.py  echo_agent.py  echo_agent_with_webhooks.py  guide_agent.py  hacker_news_agent.py  minimal_local_example.py  pause_resume_test_agent.py  pr_review_agent.py  rate_limiting_advanced.py  retry_agent.py  semantic_memory_demo.py  test_config_with_trust.json  test_pause_resume_client.py  time_agent.py  weather_agent.py  webhook_client_example.py
examples/smart_research_agent/: .gitignore  QUICK_REFERENCE.md  README.md  REQUIREMENTS.md  agent.py  architecture.md  demo_working.py  pyproject.toml  requirements.txt  test_components.py
frontend/: .dockerignore  .env  .env.example  .gitignore  BINDU_INTEGRATION_PLAN.md  README.md  entrypoint.sh  package-lock.json  package.json
gateway/: .env.example  package-lock.json  package.json
inbox/: package-lock.json  package.json
proto/: a2a.proto
release-notes/: 2026.21.1.txt  2026.22.4.txt  2026.7.3.txt
schemas/: agent.py
scripts/: generate_proto.py  generate_skill.py  test_voice_providers.sh
services/: agent_registry.py
skills/: market_skill.yaml  market_skills.py
tests/: README.md  conftest.py  conftest_stubs.py  mocks.py  reproduce_bugs_manual.py  test_circuit_breaker.py  test_dspy_agent.py  test_market_skills.py  test_retry.py  test_retry_config.py  utils.py
(+815 files in other folders)
