[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-research-assistant"
version = "1.0.0"
description = "Production-ready Bindu agent for intelligent research with web search and LLM synthesis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bindu Contributors", email = "team@bindu.ai" }
]
keywords = ["bindu", "agent", "research", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bindu>=1.0.0",
    "agno>=0.1.0",
    "openai>=1.12.0",
    "duckduckgo-search>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/binduthq/bindu"
Documentation = "https://docs.bindu.ai"
Repository = "https://github.com/binduthq/bindu"

[tool.uv]
python-version = "3.12"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I001"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
